--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,6 +8,9 @@
 
 <h1>NASA gallery</h1>
 <a href="./gallery">gallery</a>
+<h1>Display Nasa Image</h1>
+<input type="submit" name="display">
+
 
 </body>
 {{> footer}}
